Expand admin placeholder tooling and exports
Adds registry, API routes, and UI updates to improve placeholder catalog/scan
handling and provide richer exports for debugging.

--- a/public/scenario-gaps.html
+++ b/public/scenario-gaps.html
@@ -1587,7 +1587,7 @@
                             <i class="fas fa-user"></i> Personalization
                         </div>
                         <ul style="font-size: 12px; color: var(--text-muted); margin: 0; padding-left: 16px;">
-                            <li>{name} placeholder used</li>
+                            <li>{callerName} placeholder used</li>
                             <li>_noName variants exist</li>
                             <li>No deprecated placeholders</li>
                             <li>Consistent placeholder naming</li>
