Fix syntax error: remove orphan catch block in Global Brain
The } catch (e) { on line 20890 had no matching try block,
causing 'missing ) after argument list' JavaScript error.
Removed the orphan catch and added proper page init log.

--- a/public/admin-global-instant-responses.html
+++ b/public/admin-global-instant-responses.html
@@ -20887,10 +20887,8 @@ ${JSON.stringify(healthData, null, 2)}
                 }, 1500);
             }
             
-        } catch (e) {
-            console.error('❌ Initialization error (suppressed):', e);
-        }
-    });
+            console.log('✅ [PAGE INIT] Page initialization complete');
+        });
     
     // ════════════════════════════════════════════════════════════════════════════════
     // DEEP AUDIT DIRECT EDIT FUNCTIONS
