--- a/public/scenario-gaps.html
+++ b/public/scenario-gaps.html
@@ -3421,13 +3421,17 @@
                                 <div style="font-size: 15px; font-weight: 600; color: var(--text-primary);">${escapeHtml(scenario.name)}</div>
                             </div>
                             
-                            <div style="display: flex; gap: 8px; margin-bottom: 16px;">
+                            <div style="display: flex; gap: 8px; flex-wrap: wrap; margin-bottom: 16px;">
+                                <span style="background: #f59e0b; color: white; padding: 4px 10px; border-radius: 6px; font-size: 12px;">
+                                    📁 ${escapeHtml(result.categoryName || 'Auto-created')}
+                                </span>
                                 <span style="background: #8b5cf6; color: white; padding: 4px 10px; border-radius: 6px; font-size: 12px;">
                                     ${scenario.scenarioType || 'FAQ'}
                                 </span>
                                 <span style="background: var(--bg-tertiary); color: var(--text-secondary); padding: 4px 10px; border-radius: 6px; font-size: 12px;">
                                     ${scenario.priority || 'normal'} priority
                                 </span>
+                                ${result.categoryCreated ? `<span style="background: rgba(16, 185, 129, 0.2); color: #10b981; padding: 4px 10px; border-radius: 6px; font-size: 12px;">✨ New category</span>` : ''}
                             </div>
                             
                             <div style="margin-bottom: 16px;">
