--- a/public/admin-global-instant-responses.html
+++ b/public/admin-global-instant-responses.html
@@ -4695,14 +4695,15 @@
                                 <label style="display: block; font-weight: 600; color: #92400e; margin-bottom: 10px; font-size: 15px;">
                                     <i class="fas fa-flag mr-2"></i>Priority Level ⚡
                                 </label>
-                                <input type="number" id="scenario-priority" value="0" min="-10" max="10" style="width: 100%; padding: 14px 18px; border: 2px solid #fcd34d; border-radius: 10px; font-size: 18px; font-weight: 700; text-align: center; background: white;">
+                                <input type="number" id="scenario-priority" value="50" min="-10" max="100" style="width: 100%; padding: 14px 18px; border: 2px solid #fcd34d; border-radius: 10px; font-size: 18px; font-weight: 700; text-align: center; background: white;">
                                 <div style="display: flex; justify-content: space-between; margin-top: 8px;">
-                                    <span style="font-size: 11px; color: #92400e;">-10 (Low)</span>
-                                    <span style="font-size: 11px; color: #92400e;">0 (Normal)</span>
-                                    <span style="font-size: 11px; color: #92400e;">+10 (Critical)</span>
+                                    <span style="font-size: 11px; color: #92400e;">-10 (Chitchat)</span>
+                                    <span style="font-size: 11px; color: #92400e;">50 (FAQ)</span>
+                                    <span style="font-size: 11px; color: #92400e;">100 (Emergency)</span>
                                 </div>
-                                <p style="margin: 12px 0 0; font-size: 13px; color: #92400e; font-weight: 500;">
-                                    ⚡ Tie-breaker when multiple scenarios match. Emergency=10, Normal=0, Chitchat=-5
+                                <p style="margin: 12px 0 0; font-size: 12px; color: #92400e; font-weight: 500; line-height: 1.5;">
+                                    ⚡ Higher priority wins when multiple match.<br>
+                                    <span style="font-size: 11px;">Emergency: 90-100 | Booking: 70-85 | FAQ: 40-60 | Chitchat: -5 to 10</span>
                                 </p>
                             </div>
                         </div>
