FIX: Set companyId early in DOMContentLoaded to prevent null API calls
The first DOMContentLoaded handler was calling loadSettingsRegistry() and
loadScenarioPoolAlignment() before the second handler set companyId from URL.

This caused API calls like:
- /api/admin/scenario-gaps/null/audit/settings-registry (400)
- /api/admin/wiring-status/null/scenario-alignment (404)

Fix: Set companyId from URL params at the start of the first handler.

--- a/public/scenario-gaps.html
+++ b/public/scenario-gaps.html
@@ -4372,6 +4372,13 @@
             const urlParams = new URLSearchParams(window.location.search);
             
             // ════════════════════════════════════════════════════════════════════════
+            // FIX: Set companyId early so API calls don't use null
+            // ════════════════════════════════════════════════════════════════════════
+            if (!companyId) {
+                companyId = urlParams.get('companyId');
+            }
+            
+            // ════════════════════════════════════════════════════════════════════════
             // CHECK: Auto-switch to audit tab if returning from Global Brain fix
             // ════════════════════════════════════════════════════════════════════════
             if (urlParams.get('tab') === 'audit') {
