--- a/public/agent-console/agent2.html
+++ b/public/agent-console/agent2.html
@@ -529,6 +529,7 @@
 
   <!-- JavaScript -->
   <script src="/agent-console/lib/auth.js"></script>
+  <script src="/agent-console/shared/truthButton.js"></script>
   <script src="/agent-console/agent2.js"></script>
 </body>
 </html>
