--- a/public/agent-console/booking.html
+++ b/public/agent-console/booking.html
@@ -364,6 +364,7 @@
 
   <!-- JavaScript -->
   <script src="/agent-console/lib/auth.js"></script>
+  <script src="/agent-console/shared/truthButton.js"></script>
   <script src="/agent-console/booking.js"></script>
 </body>
 </html>
