--- a/public/agent-console/calendar.html
+++ b/public/agent-console/calendar.html
@@ -297,6 +297,7 @@
 
   <!-- JavaScript -->
   <script src="/agent-console/lib/auth.js"></script>
+  <script src="/agent-console/shared/truthButton.js"></script>
   <script src="/agent-console/calendar.js"></script>
 </body>
 </html>
