--- a/public/agent-console/global-hub.html
+++ b/public/agent-console/global-hub.html
@@ -290,6 +290,7 @@
 
   <!-- JavaScript -->
   <script src="/agent-console/lib/auth.js"></script>
+  <script src="/agent-console/shared/truthButton.js"></script>
   <script src="/agent-console/global-hub.js"></script>
 </body>
 </html>
