--- a/public/agent-console/index.html
+++ b/public/agent-console/index.html
@@ -230,6 +230,7 @@
 
   <!-- JavaScript -->
   <script src="/agent-console/lib/auth.js"></script>
+  <script src="/agent-console/shared/truthButton.js"></script>
   <script src="/agent-console/index.js"></script>
 </body>
 </html>
