--- a/public/agent-console/triggers.html
+++ b/public/agent-console/triggers.html
@@ -1375,6 +1375,7 @@ Example: Our maintenance plan is $179 per year with two visits."></textarea>
 
   <!-- JavaScript -->
   <script src="/agent-console/lib/auth.js"></script>
+  <script src="/agent-console/shared/truthButton.js"></script>
   <script src="/agent-console/triggers.js"></script>
 </body>
 </html>
