feat(triggers): consent gate — YES/NO confirmation with booking handoff
Trigger cards can now act as consent gates: ask a confirmation question,
wait for the caller's response, and branch based on YES/NO.

When "On Caller Confirmation" is set to "Hand off to Booking Logic":
- YES → sets sessionMode=BOOKING, AC1 handoff fires, BookingLogicEngine
  takes over on next turn (collects missing info, checks calendar, books)
- NO → acknowledges and continues normal conversation
- Complex response → clears question, routes through normal discovery
- Unclear → re-asks the confirmation question

Changes:
- Agent2DiscoveryRunner YES path checks lastNextAction; when
  HANDOFF_BOOKING, sets sessionMode=BOOKING + consent state
- v2twilio.js logs CONSENT_GATE_BOOKING diagnostic turn to transcript
- triggers.html adds "On Caller Confirmation (Yes)" dropdown (shown
  only when Follow-up Question is present)
- triggers.js saves/loads followUpNextAction, toggles dropdown visibility
- truth/CONSENT-GATE.md: complete flow documentation with state machine,
  transcript logging spec, and configuration guide

Made-with: Cursor

--- a/public/agent-console/triggers.html
+++ b/public/agent-console/triggers.html
@@ -1199,7 +1199,17 @@ Example: Our maintenance plan is $179 per year with two visits."></textarea>
             
             <div class="form-group">
               <label class="form-label">Follow-up Question</label>
-              <textarea class="form-textarea" id="input-trigger-followup" rows="2" placeholder="Would you like to schedule a visit?"></textarea>
+              <textarea class="form-textarea" id="input-trigger-followup" rows="2" placeholder="Just to confirm — this is a routine request, right?"></textarea>
+              <p class="form-hint">If set, asked after the Answer Text. Waits for caller to respond.</p>
+            </div>
+
+            <div class="form-group" id="followup-action-group" style="display: none;">
+              <label class="form-label">On Caller Confirmation (Yes)</label>
+              <select class="form-select" id="input-trigger-followup-action">
+                <option value="CONTINUE">Continue conversation</option>
+                <option value="HANDOFF_BOOKING">Hand off to Booking Logic</option>
+              </select>
+              <p class="form-hint">When the caller confirms (yes), what should happen next?</p>
             </div>
           </div>
           
